--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,12 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/main_menu_mockup"
     android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+    <Button
+        android:id="@+id/button_to_zoo"
+        android:onClick=""
+        android:layout_width="180dp"
+        android:layout_height="100dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="80dp"
+        android:background="@android:color/transparent"
+        android:visibility="visible" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/button_to_quiz"
+        android:onClick=""
+        android:layout_width="220dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="200dp"
+        android:background="@android:color/transparent"
+        android:visibility="visible" />
+
+</RelativeLayout>
