--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/main_menu_mockup"
-    android:orientation="vertical" >
+    android:background="#aaf"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="20dp" >
 
-    <Button
-        android:id="@+id/button_to_zoo"
-        android:onClick=""
-        android:layout_width="180dp"
-        android:layout_height="100dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="80dp"
-        android:background="@android:color/transparent"
-        android:visibility="visible" />
+    <ImageView
+        android:id="@+id/image_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="@dimen/defaultMargin"
+        android:layout_weight="0"
+        android:adjustViewBounds="true"
+        android:src="@drawable/main_title" />
 
-    <Button
-        android:id="@+id/button_to_quiz"
-        android:onClick=""
-        android:layout_width="220dp"
-        android:layout_height="100dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="60dp"
-        android:layout_marginTop="200dp"
-        android:background="@android:color/transparent"
-        android:visibility="visible" />
+    <ImageView
+        android:id="@+id/image_button_to_zoo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_margin="@dimen/defaultMargin"
+        android:layout_weight="1"
+        android:adjustViewBounds="true"
+        android:clickable="true"
+        android:onClick="goToZoo"
+        android:src="@drawable/button_to_zoo" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/image_button_to_quiz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="@dimen/defaultMargin"
+        android:layout_weight="1"
+        android:adjustViewBounds="true"
+        android:clickable="true"
+        android:src="@drawable/button_to_quiz" />
+
+</LinearLayout>
