--- a/res/layout/zoo.xml
+++ b/res/layout/zoo.xml
@@ -1,10 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="0dp"
-    android:background="@drawable/zoo_background_full"
-    android:orientation="vertical" >
-
+    android:layout_height="fill_parent"
+    android:background="#99e"
+    android:gravity="bottom"
+    android:orientation="horizontal" >
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_gravity="left"
+        android:layout_weight="1"
+        android:background="#a99e"
+        android:orientation="vertical"
+        android:padding="20dp" >
+
+        <TextView
+            android:id="@+id/zoo_animal_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Large Text"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/zoo_animal_facts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="fooooosdasdafsdgsdfsdfsdo!" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_gravity="right"
+        android:layout_weight="1"
+        android:background="#a99e"
+        android:orientation="vertical"
+        android:padding="20dp" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/nav_section"
+            android:layout_marginBottom="10dp"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:src="@drawable/animal_black" android:id="@+id/zoo_animal_image"/>
+
+        <LinearLayout
+            android:id="@id/nav_section"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true" >
+
+            <Button
+                android:id="@+id/last_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Last" />
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Next" />
+        </LinearLayout>
+    </RelativeLayout>
+
+</LinearLayout>
