added onClick method to ImageView 'image_button_to_quiz' in main.xml

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -39,6 +39,7 @@
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:clickable="true"
+        android:onClick="goToQuiz"
         android:src="@drawable/button_to_quiz" />
 
 </LinearLayout>
