--- a/res/values/animals.xml
+++ b/res/values/animals.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer-array name="animals"></integer-array>
-    
+
+    <string-array name="animal_names">
+        <item>Dog</item>
+        <item>Cat</item>
+        <item>Cow</item>
+        <item>Horse</item>
+    </string-array>
+    <string-array name="animal_facts">
+        <item>Information about the dog</item>
+        <item>Information about the cat</item>
+        <item>Information about the cow</item>
+        <item>Information about the horse</item>
+    </string-array>
+
 </resources>
